--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 
 	<link rel="stylesheet" href="app/fonts/questa_sansregular.css" type="text/css" charset="utf-8" />
 	<link href="app/app.less" type="text/css" rel="stylesheet/less">
+	<link rel="icon" href="favicon.png" type="image/png">
 
 
 </head>
@@ -46,7 +47,9 @@
 	<script src="app/heuristics/directives/heuristicsDirective/heuristicsDirective.js" data-app="true"></script>
 
 	<script src="app/mindMap/mindMap.js" data-app="true"></script>
+	<script src="app/mindMap/directives/canvasDirective/canvasDirective.js" data-app="true"></script>
 	<script src="app/mindMap/directives/mindMapDirective/mindMapDirective.js" data-app="true"></script>
+	<script src="app/mindMap/directives/nodeDirective/nodeDirective.js" data-app="true"></script>
 
 </body>
 </html>
