--- a/app/mindMap/directives/mindMapDirective/mindMapDirective.html
+++ b/app/mindMap/directives/mindMapDirective/mindMapDirective.html
@@ -1,5 +1,6 @@
 <div class="mindMapDirective">
     <div class="mindMapDirective__container">
-        <div class="mindMapDirective__title">Mind map will go here</div>
+        <div class="mindMapDirective__title">Mind Map</div>
+        <qa-canvas></qa-canvas>
     </div>
 </div>
